Move mocha to peer & dev dependency

--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
         "type": "git",
         "url": "https://github.com/unboundedsystems/mocha-slow-options.git"
     },
-    "dependencies": {
-        "mocha": "^5.1.1"
+    "devDependencies": {
+        "mocha": "^6.2.0"
+    },
+    "peerDependencies": {
+        "mocha": "5.x || 6.x"
     }
 }
